@startuml
'https://plantuml.com/class-diagram

class App{
    main()
    readUserInput()
}

class DirectoryCreator{
    createDirectories()
        createInitial()
        createJS()
        createCSS()
}

class HTML{
    createHTMLIndex()
}

App <-- DirectoryCreator
DirectoryCreator <-- HTML

@enduml